switch handling of passthrough commands to use queue, instead of polling

should fix PR kern/53059 by Frank Kardel